--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "commander": "^2.12.1",
-    "curl-request": "^1.1.1",
-    "oauth": "^0.9.15",
-    "oauth-sign": "~0.8.2",
-    "qs": "~6.5.1",
-    "uuid": "^3.1.0"
+    "oauth": "^0.9.15"
   }
 }
